--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 </head>
 <body>
-<main>
-<div class="container">
-  <figure>
+<main class="container">
+  <figure class="image">
     <img src="images/image-qr-code.png" alt="qr-code image">
   </figure>
-  <p class="header">Improve your front-end skills by building projects</p>
-  <p class="main">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-</div>
+  <section class="body">
+  <h2>Improve your front-end skills by building projects</h2>
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </section>
 </main>
   
 </body>
