--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 </head>
 <body>
-<main class="container">
+<main class="container" role="main">
   <figure class="image">
     <img src="images/image-qr-code.png" alt="qr-code image">
   </figure>
   <section class="body">
-  <h2>Improve your front-end skills by building projects</h2>
+  <h1>Improve your front-end skills by building projects</h1>
   <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </section>
 </main>
