added box shadow

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<main class="container" role="main">
+<main class="container">
   <figure class="image">
     <img src="images/image-qr-code.png" alt="qr-code image">
   </figure>
