--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-</head>
-<body>
-<main class="container">
-  <figure class="image">
-    <img src="images/image-qr-code.png" alt="qr-code image">
-  </figure>
-  <section class="body">
-  <h1>Improve your front-end skills by building projects</h1>
-  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </section>
-</main>
-  
-</body>
+    <title>Frontend Mentor | QR code component</title>
+  </head>
+  <body>
+    <main class="container">
+      <h1 class="sr-only">QR code component</h1>
+      <figure class="image">
+        <img
+          src="images/image-qr-code.png"
+          alt="qr-code image"
+          class="qr_code"
+        />
+      </figure>
+      <div class="content">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
